<resources>
    <string name="app_name">My Anime List</string>

    //defaults
    <string name="label_save">Save</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_delete">Delete</string>
    <string name="label_close">Close</string>
    <string name="label_open">Open</string>

    //new anime
    <string name="label_new_anime">My New Anime</string>
    <string name="label_anime_tittle">Anime Title</string>
    <string name="label_anime_genre">Genre</string>
    <string name="label_anime_description">Description</string>
    <string name="label_title_empty_warning">Title Must Be Filled</string>
    <string name="label_genre_empty_warning">Genre Must Be Filled</string>
    <string name="label_success_save">Your Anime List Updated</string>
    <string name="label_fail_save">An Error occured</string>
</resources>
